mule-user-guide/v/3.2/installing-mule-esb-3-and-the-mule-ide.adoc
= Installing Mule ESB 3 and the Mule IDE

If you are installing Mule Enterprise, read the next section. If you are installing the community or snapshot release, skip ahead to MULE3INSTALL:that section.

== Installing Mule Enterprise

[TIP]
These instructions are for Mule Enterprise only. For the community or snapshot releases, skip to the next section.

This section describes installation of Mule Enterprise. Follow the instructions for the version of the file you downloaded.

=== Installing the TAR.GZ

. If you downloaded the TAR.GZ version of Mule Enterprise, simply decompress the files into a directory. You must use a decompression utility like WinZip, not just the built-in Windows extractor.

[IMPORTANT]
Do not install Mule in a directory path that contains spaces!

. Do one of the following:
* If you will use the Mule IDE, see http://www.mulesoft.org/mule-ide[Installing Mule IDE].
* If you will use Maven, skip ahead to MULE3INSTALL:set up your Maven repository.
* Otherwise, skip ahead to the section on MULE3INSTALL:Running Mule.

=== Set Up the Maven Repository

You are now ready to set up your Maven repository as follows:

. Open a command prompt and navigate to the Mule `bin` directory.
. Type `populate_m2_repo.cmd` followed by the location of the Maven repository directory (the same directory you specified in the `settings.xml` file when you installed Maven).

For example:

[source, code, linenums]
----
cd c:\mule\binpopulate_m2_repo.cmd c:\.m2\repository
----

This step is required to populate the Maven repository with the local Mule Enterprise JAR files from the distribution. Note that when you add Mule Enterprise-only features to your code, you must add the correct [dependencies] to your POM before building your project with Maven.

You have completed the Mule installation and setup. You can now go to the http://www.mulesoft.org/display/MULEIDE/Mule+IDE+2.0+User+Guide[Mule IDE User Guide] for information on getting started, or skip to link:/documentation-3.2/display/32X/Running+Mule+ESB+3[Running Mule ESB 3] if you will not use the Mule IDE.

== Installing the Mule Community or Snapshot Release

This section describes installation of the community or snapshot release on Windows or Linux/UNIX.

. If you have a previous release already installed, you should delete the directory where it is installed before installing the later release.
. Go to the http://www.mulesoft.org/display/MULE/Download[Mule download page].
. Click the link next to the release you want to download. Use the `.zip` links for installing on Windows and the `.tar.gz` links for installing on Linux/UNIX. The latest releases are at the top of the page.
. On Linux/UNIX, if you must download it through a terminal instead of a browser, or if you must download to a remote computer without X-Windows, use `wget`. For example, to download the Mule 2.0.1 snapshot using `wget`, enter the following command on one line:

[source, code, linenums]
----
wget http://snapshots.dist.codehaus.org/mule/org/mule/distributions/mule-full/2.0.1-SNAPSHOT/mule-full-2.0.1-SNAPSHOT.tar.gz
----

. After the distribution is downloaded, extract the files from it into your installation directory. For example, on Linux/UNIX, you would switch to your installation directory, and then enter the following command:

[source, code, linenums]
----
tar -xvzf mule-full-2.0.1-SNAPSHOT.tar.gz
----
+
[IMPORTANT]
Do not install Mule in a directory path that contains spaces!

== Installing Multiple Instances

To install multiple instances of Mule on the same machine, simply unpack the distribution archive as described above to a different location.

Mule 3 does no longer support sharing a Mule installation directory between multiple instances.

== Installing the Mule IDE

. Run Eclipse.
. In the workbench view, click **Help > Install New Software**.
. Click the *Add* button next to the Work with text box, enter http://dist.muleforge.org/mule-ide/updates-2.1.x/ for the location, and press *Enter*. The Mule IDE now appears in your list of available software.
. Select the Mule IDE check box and click *Next*. Eclipse will process for a moment. Then click *Next* again.
. Review the Mule IDE license, select the option to accept the license, and then click *Finish*.
. Click *Yes* to restart Eclipse.

If you are using Eclipse version 3.4 (Ganymede) follow these steps to install Mule IDE:

. In the workbench view, choose **Help > Software Updates**.
. On the Available Software tab, click *Add Site*.
. Specify `http://dist.muleforge.org/mule-ide/updates-2.1.x/` for the location and click *OK*. It now appears in your list of available software.
. Expand it in the list until you see Mule IDE. Click *Mule IDE* and click *Install*.
. Click *Next*, read and accept the license agreement terms, and click *Finish*.
. Choose to run the installation in the background.
. When prompted, restart Eclipse.
